feat: 先提交部分代码，整体框架已经具备

--- a/pulse_bus_core/pom.xml
+++ b/pulse_bus_core/pom.xml
@@ -34,6 +34,18 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>4.0.0</version>
+        </dependency>
+
         <!-- 必要依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
