--- a/pulse_bus_core/pom.xml
+++ b/pulse_bus_core/pom.xml
@@ -46,6 +46,12 @@
             <version>4.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>3.6.1</version>
+        </dependency>
+
         <!-- 必要依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
